2012-10-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-debug-message): Remove
	"tramp-with-progress-reporter" from regexp of ignored functions.
	(with-tramp-progress-reporter): Rename from
	`tramp-with-progress-reporter'.
	(with-tramp-file-property, with-tramp-connection-property): Move
	from tramp-cache.el, rename from `with-file-property' and
	`with-connection-property', respectively.

	* tramp-cache.el: Remove `with-file-property' and
	`with-connection-property'.

	* tramp.el:
	* tramp-gvfs.el:
	* tramp-sh.el:
	* tramp-smb.el: Adapt callees.

2012-10-06  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-save-ad-hoc-proxies): Add missing group :version tag.

2012-09-17  Chong Yidong  <cyd@gnu.org>

	* tramp-cmds.el (tramp-bug): Doc fixes.

2012-09-12  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.2.6 released.

	* tramp.el (tramp-accept-process-output): Don't use JUST-THIS-ONE
	in the XEmacs case.

2012-08-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-remote-path): Add "/sbin" and "/usr/local/sbin".

2012-08-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-accept-process-output): Accept only output from
	PROC.  Otherwise, process filters and sentinels might be confused.
	(Bug#12145)

2012-08-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-start-file-process): Eliminate
	superfluous prompt.  (Bug#12203)

2012-08-16  Glenn Morris  <rgm@gnu.org>

	* tramp.el:
	* tramp-smb.el: Replace version 24.2 with 24.3 where appropriate.

2012-08-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-open-shell): Cache the shell name.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Use cached shell name.

2012-08-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-file-exists-command): Protect the tests
	by `ignore-error'.
	(tramp-find-shell): Open also a new shell, when cache is already