@@ -1,3 +1,10 @@
+2012-10-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-smb.el (tramp-smb-maybe-open-connection): Set
+	`tramp-chunksize' to 1.  This improves the performance.
+	(tramp-smb-wait-for-output): Add timeout to
+	`tramp-accept-process-output' calls.
+
 2012-10-09  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-debug-message): Remove
